# mailnow

./: .env.example  .gitignore  DEVELOPMENT_WORKFLOW.md  LOGGING.md  MailNow_API_Complete.postman_collection.json  README-Docker.md  README.md  SETUP.md  deploy.sh  docker-compose.yml  orm_model.md  requirements.txt  schema.sql  setup_db.sql  tables.json
admin/: .gitignore  .python-version  Dockerfile  pyproject.toml  requirements.txt
admin/admin/: admin.py  settings.py  urls.py
admin/core/: admin.py  models.py
admin/users/: admin.py  constants.py  models.py  views.py
admin/utils/: utils.py
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
api/src/: main.rs  schema.rs
api/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
api/src/config/: db.rs  redis.rs
api/src/controllers/: api_keys_controller.rs  auth_controller.rs  dashboard_controller.rs  email_controller.rs  logs_controller.rs  mod.rs  onboarding_controller.rs  public_email_controller.rs  settings_controller.rs  smtp_controller.rs  team_controller.rs  templates_controller.rs  user_controller.rs
api/src/dto/: users_dto.rs
api/src/errors/: mod.rs
api/src/middleware/: auth.rs  credits.rs  mod.rs  request_logging.rs
api/src/models/: core.rs  users.rs
api/src/repositories/: core.rs  factory.rs  mod.rs  users.rs
api/src/routes/: api_keys_routes.rs  auth_routes.rs  dashboard_routes.rs  email_routes.rs  logs_routes.rs  mod.rs  onboarding_routes.rs  public_email_routes.rs  settings_routes.rs  smtp_routes.rs  team_routes.rs  (+2 more)
api/templates/: team_invite.html  verify_email.html
(+8 files in other folders)
