[project]
name = "admin"
version = "0.1.0"
description = "MailNow Admin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "sparky-utils>=1.1.8",
    "python-dotenv>=1.0.0",
    "dj-database-url>=2.1.0",
    "psycopg2-binary>=2.9.0",
]
