[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono"] }
env_logger = "0.11.8"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
log = "0.4.22"
thiserror = "1.0.69"